# paperclip

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  vpf.md
.github/workflows/: build.yml
include/: Application.hpp  common.hpp  easings.hpp  frame.hpp  state.hpp  utils.hpp  video.hpp  widgets.hpp
include/action/: action.hpp
include/action/actions/: ChangeClipTrack.hpp  CreateClip.hpp  CreateVideoClip.hpp  MoveClip.hpp  ResizeClip.hpp
include/binary/: error.hpp  reader.hpp  writer.hpp
include/clips/: all.hpp  clip.hpp
include/clips/default/: circle.hpp  image.hpp  rectangle.hpp  text.hpp  video.hpp
include/clips/properties/: color.hpp  dimensions.hpp  dropdown.hpp  number.hpp  position.hpp  text.hpp  transform.hpp
include/format/: vpf.hpp
include/format/binary/: error.hpp
include/renderer/: audio.hpp  text.hpp  video.hpp
include/shaders/: quad.hpp  shader.hpp  shape.hpp  text.hpp  texture.hpp
include/track/: audio.hpp  video.hpp
libs/ffmpeg/ext/linux/: README.md
libs/ffmpeg/include/libavutil/: ffversion.h
libs/glad/include/glad/: gl.h
libs/imguinotify/: ImGuiNotify.hpp
resources/fonts/: README.txt
src/: main.cpp  shader.cpp  utils.cpp  video.cpp
src/actions/: ChangeClipTrack.cpp  CreateClip.cpp  CreateVideoClip.cpp  MoveClip.cpp  ResizeClip.cpp
src/binary/: error.cpp  reader.cpp  writer.cpp
src/clips/: circle.cpp  clip.cpp  image.cpp  rectangle.cpp  text.cpp  video.cpp
src/clips/properties/: color.cpp  dimensions.cpp  dropdown.cpp  number.cpp  position.cpp  text.cpp  transform.cpp
src/core/: AudioRenderer.cpp  Frame.cpp  TextRenderer.cpp  VideoRenderer.cpp
src/easings/: easings.cpp
src/format/: vpf.cpp
src/format/binary/: error.cpp  reader.cpp  writer.cpp
src/renderer/: AudioRenderer.cpp  TextRenderer.cpp
src/track/: audio.cpp  video.cpp
src/ui/: Application.cpp
src/ui/application/initialization/: imgui.cpp  other.cpp
src/ui/application/windows/: Media.cpp  MenuBar.cpp  Player.cpp  PlayerControls.cpp  Properties.cpp  Track.cpp  Viewport.cpp
src/ui/widgets/: Timeline.cpp
src/utils/: utils.cpp  video.cpp
